--- a/styles/index.css
+++ b/styles/index.css
@@ -174,6 +174,9 @@ main {
 footer {
   height: 200px;
   margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  gap: 40px;
 }
 .svg-icons {
   width: 30px;
